--- a/clusters/staging/my-system/app-deployment.yaml
+++ b/clusters/staging/my-system/app-deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app-deployment
+  Namespace: my-system
 spec:
   replicas: 2
   selector:
@@ -22,6 +23,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: api-deployment
+  Namespace: my-system
 spec:
   replicas: 2
   selector:
