--- a/clusters/staging/my-system/app-service.yaml
+++ b/clusters/staging/my-system/app-service.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: app-service
+  Namespace: my-system
 spec:
   selector:
     app: app
@@ -14,6 +15,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: api-service
+  Namespace: my-system
 spec:
   selector:
     app: api
