--- a/clusters/staging/flux-system/gotk-sync.yaml
+++ b/clusters/staging/flux-system/gotk-sync.yaml
@@ -21,7 +21,7 @@ metadata:
 spec:
   interval: 1m0s
   path: ./clusters/staging
-  prune: false
+  prune: true
   sourceRef:
     kind: GitRepository
     name: flux-system
