--- a/clusters/staging/apache2-service.yaml
+++ b/clusters/staging/apache2-service.yaml
@@ -4,9 +4,15 @@ metadata:
   name: apache2-service
   namespace: www
 spec:
+  type: NodePort
   selector:
     app: apache2
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
+  - name: port-1  # Provide a meaningful name for the first port
+    protocol: TCP
+    port: 20000
+    targetPort: 25000
+  - name: port-2  # Provide a meaningful name for the second port
+    protocol: TCP
+    port: 30000
+    targetPort: 35000
