--- a/clusters/staging/nginx-service.yaml
+++ b/clusters/staging/nginx-service.yaml
@@ -4,10 +4,10 @@ metadata:
   name: nginx-service
   namespace: www
 spec:
+  type: NodePort
   selector:
     app: nginx
   ports:
   - protocol: TCP
     port: 80
-    targetPort: 80
-  #type: NodePort
+    targetPort: 8081
