--- a/clusters/test-app/hello-world-deployment-1.yaml
+++ b/clusters/test-app/hello-world-deployment-1.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: hello-world-deployment-1
+  namespace: test-app
 spec:
   selector:
     matchLabels:
